--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 # Base URL
-baseurl: https://rzuckerm.github.io/sample-programs-website-copy
+baseurl: rzuckerm.github.io/sample-programs-website-copy
 
 # Theme data
 theme: jekyll-theme-dinky
