Change baseurl to url

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-# Base URL
-baseurl: https://rzuckerm.github.io/sample-programs-website-copy
+# Site URL
+url: https://rzuckerm.github.io/sample-programs-website-copy
 
 # Theme data
 theme: jekyll-theme-dinky
