--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,6 @@
 # Site URL
-url: https://rzuckerm.github.io/sample-programs-website-copy
+url:
+baseurl: https://rzuckerm.github.io/sample-programs-website-copy
 
 # Theme data
 theme: jekyll-theme-dinky
