Set url in config to the same value of baseurl

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 # Site URL
-url:
+url: https://rzuckerm.github.io/sample-programs-website-copy
 baseurl: https://rzuckerm.github.io/sample-programs-website-copy
 
 # Theme data
