--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 # Site URL
-url: ""
-baseurl: https://rzuckerm.github.io/sample-programs-website-copy
+url: https://rzuckerm.github.io/sample-programs-website-copy
+baseurl: ""
 
 # Theme data
 theme: jekyll-theme-dinky
