--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Generate Images
         run: |
           sources=sources/images/
-          images=docs/assets/images/
-          logo=icon-small.png
+          images=docs/assets/images/generated/
+          logo=../icon-small.png
           for file in "$sources"*
           do
             image-titler --path "$file" --output "$images" --logo "$images$logo"
