--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
           sources=sources/images/
           images=docs/assets/images/generated/
           logo=../icon-small.png
+          rm -rf "$images"
+          mkdir -p "$images"
           for file in "$sources"*
           do
             image-titler --path "$file" --output "$images" --logo "$images$logo"
