--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
           mkdir -p "$images"
           for file in "$sources"*
           do
-            image-titler --path "$file" --output "$images" --logo "$images$logo"
+            image-titler --path "$file" --output "$images" --logo "$images$logo" --no-title
             filename=$(basename "$file")
             edit=$(cd "$images" && ls -t | head -n1)
             mv "$images$edit" "$images$filename" 
